# Aternos-Discord-Bot

./: AternosBot.py  Procfile  main.py  pyproject.toml  requirements.txt
aternosapi/: __init__.py
